Add MD5 functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ PowerEditor/bin/SourceCodePro-Regular.ttf
 /PowerEditor/bin/libgcc_s_sjlj-1.dll
 /PowerEditor/bin/libstdc++-6.dll
 /PowerEditor/bin/libwinpthread-1.dll
+
+PowerEditor/src/MISC/md5/RCa06792
