Enhancement of  "Word characters list"
While double-clicking to select or searching with "Match whole word
only" option, the selected characters stop on non-word characters. With
this enhancement, users can include any non-word character into word
characters list, to change its default behaviour.

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -181,8 +181,8 @@ BEGIN
     CONTROL         "",IDC_OPENSAVEDIR_ALWAYSON_RADIO,"Button",BS_AUTORADIOBUTTON,118,89,11,10
     EDITTEXT        IDC_OPENSAVEDIR_ALWAYSON_EDIT,134,88,179,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDD_OPENSAVEDIR_ALWAYSON_BROWSE_BUTTON,320,87,16,14
-		CONTROL         "Use new style save dialog (without file extension feature)",IDC_OPENSAVEDIR_CHECK_USENEWSTYLESAVEDIALOG, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,145,250,10
-		CONTROL         "Open all files of folder instead of launching Folder as Workspace on folder dropping",IDC_OPENSAVEDIR_CHECK_DRROPFOLDEROPENFILES, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,158,290,10
+	CONTROL         "Use new style save dialog (without file extension feature)",IDC_OPENSAVEDIR_CHECK_USENEWSTYLESAVEDIALOG, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,145,250,10
+	CONTROL         "Open all files of folder instead of launching Folder as Workspace on folder dropping",IDC_OPENSAVEDIR_CHECK_DRROPFOLDEROPENFILES, "Button",BS_AUTOCHECKBOX | WS_TABSTOP,110,158,290,10
 END
 
 IDD_PREFERENCE_RECENTFILESHISTORY_BOX DIALOGEX 0, 0, 455, 185
@@ -371,15 +371,23 @@ IDD_PREFERENCE_DELIMITERSETTINGS_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Delimiter selection settings (Ctrl + Mouse double click)",IDC_DELIMITERSETTINGS_GB_STATIC,89,44,268,89,BS_CENTER
-    RTEXT           "Open",IDD_STATIC_OPENDELIMITER,117,67,34,8
-    EDITTEXT        IDC_EDIT_OPENDELIMITER,156,65,14,14
-    LTEXT           "bla bla bla bla bla bla",IDD_STATIC_BLABLA,172,67,56,8
-    LTEXT           "bla bla bla bla bla bla bla bla bla bla bla bla",IDD_STATIC_BLABLA2NDLINE,132,87,126,8
-    EDITTEXT        IDC_EDIT_CLOSEDELIMITER,237,65,14,14
-    LTEXT           "Close",IDD_STATIC_CLOSEDELIMITER,252,67,47,8
+    GROUPBOX        "Word character list",IDC_WORDCHARLIST_GB_STATIC,89,2,268,93,BS_CENTER
+    CONTROL         "Use default Word character list as it is",IDC_RADIO_WORDCHAR_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP,100,18,250,10
+    CONTROL         "Add your character as part of word\r(don't choose it unless you know what you're doing)",IDC_RADIO_WORDCHAR_CUSTOM,
+                    "Button",BS_AUTORADIOBUTTON | BS_MULTILINE | WS_GROUP,100,32,250,20
+    EDITTEXT        IDC_WORDCHAR_CUSTOM_EDIT,111,54,180,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "?",IDD_WORDCHAR_QUESTION_BUTTON,303,53,16,14
+    LTEXT           "",IDD_STATIC_WORDCHAR_WARNING,111,70,210,8
+	
+    GROUPBOX        "Delimiter selection settings (Ctrl + Mouse double click)",IDC_DELIMITERSETTINGS_GB_STATIC,89,113,268,70,BS_CENTER
+    RTEXT           "Open",IDD_STATIC_OPENDELIMITER,117,128,34,8
+    EDITTEXT        IDC_EDIT_OPENDELIMITER,156,126,14,14
+    LTEXT           "bla bla bla bla bla bla",IDD_STATIC_BLABLA,172,128,56,8
+    LTEXT           "bla bla bla bla bla bla bla bla bla bla bla bla",IDD_STATIC_BLABLA2NDLINE,132,148,126,8
+    EDITTEXT        IDC_EDIT_CLOSEDELIMITER,237,126,14,14
+    LTEXT           "Close",IDD_STATIC_CLOSEDELIMITER,252,128,47,8
     CONTROL         "Allow on several lines",IDD_SEVERALLINEMODEON_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,109,160,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,118,166,160,10
 END
 
 IDD_PREFERENCE_SETTINGSONCLOUD_BOX DIALOGEX 0, 0, 455, 185
@@ -391,7 +399,7 @@ BEGIN
     CONTROL         "Set your cloud location path here:",IDC_WITHCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,72,180,10
     EDITTEXT        IDC_CLOUDPATH_EDIT,134,88,179,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDD_CLOUDPATH_BROWSE_BUTTON,320,87,16,14
-    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,135,20
+    LTEXT           "",IDC_SETTINGSONCLOUD_WARNING_STATIC,131,117,220,20
 END
 
 IDD_PREFERENCE_SEARCHENGINE_BOX DIALOGEX 0, 0, 455, 185
