--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ PowerEditor/bin/SourceCodePro-Regular.ttf
 /PowerEditor/bin/libwinpthread-1.dll
 
 PowerEditor/src/MISC/md5/RCa06792
+*.db
+*.sln
