Add UI part for Document snapshot feature
Enhance doc snapshot on several points.

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -119,7 +119,9 @@ STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     CONTROL         "Enable",IDC_CHECK_ENABLEDOCSWITCHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,15,140,10
+    CONTROL         "Snapshot on tab",IDC_CHECK_ENABLEDOCSNAPSHOT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,58,140,10
     CONTROL         "Enable MRU behaviour",IDC_CHECK_STYLEMRU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,28,140,10
+    CONTROL         "Snapshot on map",IDC_CHECK_ENABLEDOCSNAPSHOTONMAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,71,140,10
     CONTROL         "Enable Notepad++ auto-updater",IDC_CHECK_AUTOUPDATE,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,37,83,150,10
     CONTROL         "Autodetect character encoding",IDC_CHECK_DETECTENCODING,
@@ -141,6 +143,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_WORKSPACEFILEEXT,381,152,34,14,ES_AUTOHSCROLL
     GROUPBOX        "Document Switcher (Ctrl+TAB)",IDC_DOCUMENTSWITCHER_STATIC,37,4,155,39,BS_CENTER
     GROUPBOX        "Clickable Link Settings",IDC_CLICKABLELINK_STATIC,259,4,155,39,BS_CENTER
+    GROUPBOX        "Document Snapshot",IDC_DOCUMENTSNAPSHOT_STATIC,37,47,155,39,BS_CENTER
     GROUPBOX        "File Status Auto-Detection",IDC_FILEAUTODETECTION_STATIC,259,47,155,50,BS_CENTER
     RTEXT           "Session file ext.:",IDC_SESSIONFILEEXT_STATIC,271,138,108,8
     RTEXT           "Workspace file ext.:",IDC_WORKSPACEFILEEXT_STATIC,271,155,108,8
