Make FindReplace dialog resizable horizontally
Closes #3376, closes #2516, closes #774

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -32,7 +32,7 @@
 #include "FindReplaceDlg_rc.h"
 
 IDD_FIND_REPLACE_DLG DIALOGEX 36, 44, 367, 200
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
