Make button size & position right in find replace dialog

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -66,17 +66,17 @@ BEGIN
     CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED,
                     "Button",BS_AUTORADIOBUTTON,12,155,145,10
     CONTROL         "Re&gular expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,12,167,78,10
-    PUSHBUTTON      "Find Previous", IDC_FINDPREV, 268, 20, 45, 21, WS_GROUP | BS_MULTILINE
-    PUSHBUTTON      "Find Next", IDOK, 313, 20, 45, 21, WS_GROUP | BS_MULTILINE
-    PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,45,90,14
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,64,90,21,BS_MULTILINE
-    PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,87,90,21,BS_MULTILINE
-    PUSHBUTTON      "&Replace",IDREPLACE,268,46,90,14
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,268,63,90,14
-    PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,81,90,21,BS_MULTILINE
+    PUSHBUTTON      "<< Find", IDC_FINDPREV, 268, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "Find >>", IDOK, 313, 20, 45, 14, WS_GROUP | BS_MULTILINE
+    PUSHBUTTON      "Coun&t",IDCCOUNTALL,268,38,90,14
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,268,56,90,21,BS_MULTILINE
+    PUSHBUTTON      "Find All in Current Document",IDC_FINDALL_CURRENTFILE,268,80,90,21,BS_MULTILINE
+    PUSHBUTTON      "&Replace",IDREPLACE,268,38,90,14
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,268,56,90,14
+    PUSHBUTTON      "Replace All in All &Opened Documents",IDC_REPLACE_OPENEDFILES,268,74,90,21,BS_MULTILINE
     PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,268,20,90,14,WS_GROUP
     PUSHBUTTON      "&Replace in Files",IDD_FINDINFILES_REPLACEINFILES,268,38,90,14
-    PUSHBUTTON      "Close",IDCANCEL,268,105,90,14
+    PUSHBUTTON      "Close",IDCANCEL,268,98,90,14
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,258,131,99,48
     CONTROL         "Transparenc&y",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,254,131,80,10
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,268,143,85,10
