Make new entries translatable

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -116,7 +116,7 @@ END
 IDD_FINDINFINDER_DLG DIALOGEX 36, 44, 367, 200
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
-CAPTION "Find in finder"
+CAPTION "Find in found results"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
@@ -130,7 +130,7 @@ BEGIN
     CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
     CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
 	CONTROL         "&. matches newline",IDREDOTMATCHNL_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "Find all",IDOK,268,20,90,14,WS_GROUP
+    PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
 	PUSHBUTTON      "Close",IDCANCEL,268,38,90,14
 END
 
